# HandcrankEngine

./: .clangd  .gitignore  .prettierrc  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  README.md  compile_flags.txt  docker-compose.yml  package-lock.json  package.json
.github/workflows/: CMakeLists.txt  build.workflow.yml  lint.workflow.yml  test.workflow.yml
documentation/: README.md
documentation/Basics/: Animations.md  Keyboard Input.md  Mouse Input.md  README.md  Update Loop.md
documentation/Basics/Animations/: Animator.cpp  BlinkingAnimation.cpp  README.md
documentation/Basics/Keyboard Input/: KeyPressedAndKeyReleased.cpp  README.md
documentation/Basics/Mouse Input/: MouseDownAndMouseUpEvents.cpp  MouseOverAndMouseOutEvents.cpp  MousePosition.cpp  README.md
documentation/Basics/Update Loop/: README.md  UpdateLoop.cpp
documentation/Basics/Window/: README.md
documentation/Building/: Docker.md  README.md  Web.md  Windows.md  macOS.md
documentation/Examples/: FPS.md  README.md
documentation/Examples/FPS/: FPS.cpp  README.md
documentation/Getting Started/: DrawImage.cpp  DrawRectangle.cpp  README.md
documentation/RenderObjects/: Custom RenderObject.md  ImageRenderObject.md  README.md  RectRenderObject.md  Scene.md  SpriteRenderObject.md  TextRenderObject.md  VertexRenderObject.md
documentation/RenderObjects/Custom RenderObjects/: CustomRenderObject.cpp  README.md
documentation/RenderObjects/ImageRenderObject/: LoadingAndRenderingImages.cpp  README.md
documentation/RenderObjects/RectRenderObject/: README.md  RenderingRectangleObject.cpp
documentation/RenderObjects/SpriteRenderObject/: README.md  RenderingAnimatedSpriteSheet.cpp
documentation/RenderObjects/TextRenderObject/: LoadingFontsAndRenderingText.cpp  README.md
documentation/RenderObjects/VertexRenderObject/: README.md  RenderSingleTextureMultipleTimes.cpp
documentation/Scenes/: CreatingAScene.cpp  ManagingScenesWithSceneManager.cpp  README.md  SwitchingScenes.cpp
documentation/Testing/: README.md  Valgrind.md
doxygen/doxygen-awesome-css/: doxygen-awesome.css
examples/animation/: AnimatedBorder.hpp
examples/box/: Box.hpp
examples/box2d/: PhysicsDemo.hpp  World.hpp  WorldEntity.hpp
examples/fps/: FPS.hpp
examples/logo-screensaver/: LoadScreenSaver.hpp  LogoScreenSaver.hpp
examples/paused-screen/: PausedScreen.hpp
examples/spawner/: Spawner.hpp
examples/sprite/: GreenAlien.hpp
examples/svg/: Tiger.hpp
examples/tile-map/: TileMap.hpp
fonts/: loader.h
images/: sdl_logo.h
include/Handcrank/: Animation.hpp  Animator.hpp  Audio.hpp  AudioCache.hpp  CircleRenderObject.hpp  FontCache.hpp  Handcrank.hpp  ImageRenderObject.hpp  RectRenderObject.hpp  SpriteRenderObject.hpp  TextRenderObject.hpp  TextureCache.hpp  Utilities.hpp  Vector2.hpp  Vector3.hpp  VertexRenderObject.hpp
include/Handcrank/sdl/: SDL_Image_Utilities.hpp  SDL_TTF_Utilities.hpp  SDL_Utilities.hpp
include/HandcrankEngine/: Animation.hpp  Animator.hpp  Audio.hpp  AudioCache.hpp  FontCache.hpp  HandcrankEngine.hpp  ImageRenderObject.hpp  InputHandler.hpp  RectRenderObject.hpp  Scene.hpp  SceneManager.hpp  SpriteRenderObject.hpp  TextRenderObject.hpp  TextureCache.hpp  TextureRenderObject.hpp  Utilities.hpp  Vector2.hpp  VertexRenderObject.hpp
includes/Handcrank/: CircleRenderObject.hpp  Game.hpp  GameObject.hpp  GeoRenderObject.hpp  Handcrank.hpp  ImageRenderObject.hpp  RectRenderObject.hpp  RenderObject.hpp  TextRenderObject.hpp  Utilities.hpp  Vector2.hpp  Vector3.hpp
includes/Handcrank/sdl/: SDL_Image_Utilities.hpp  SDL_TTF_Utilities.hpp  SDL_Utilities.hpp
src/: main.cpp
tests/Handcrank/: Utilities.cpp  Vector2.cpp  Vector3.cpp
tests/HandcrankEngine/: Game.cpp  Utilities.cpp  Vector2.cpp
tests/valgrind/: Dockerfile
